--- a/index.html
+++ b/index.html
@@ -2,161 +2,69 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prashansha Neupane Portfolio</title>
+    <title>Prashansha Neupane | Portfolio</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Navigation -->
     <header>
-      <div class="container">
-        <h1 class="logo">Prashansha Neupane</h1>
-        <nav>
-          <ul id="nav-links">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-          <button id="menu-toggle">☰</button>
-        </nav>
-      </div>
+      <h2>Prashansha</h2>
+      <nav>
+        <a href="#about">About</a>
+        <a href="#skills">Skills</a>
+        <a href="#education">Education</a>
+        <a href="#contact">Contact</a>
+      </nav>
     </header>
 
-    <!-- Home / About Me -->
-    <section id="home" class="section">
-      <div class="container home-container">
-        <img
-          src="prashansha.image.jpeg"
-          alt="Prashansha Neupane"
-          class="profile-img"
-        />
-        <div class="bio">
-          <h2>Hello, I'm Prashansha Neupane</h2>
-          <p>
-            BCA student at Nepathya College from Butwal. I love coding
-            (JavaScript, HTML, CSS, Node.js), creating designs in Photoshop, and
-            editing videos in DaVinci Resolve.
-          </p>
+    <section class="hero">
+      <div class="hero-text">
+        <h1>Hi, I'm Prashansha 👋</h1>
+        <p>BCA Student | Web Developer</p>
+        <div class="buttons">
+          <button>View Skills</button>
+          <button class="outline">Download CV</button>
         </div>
+      </div>
+
+      <div class="hero-img">
+        <img src="prashansha.image2.jpeg" alt="Profile" />
       </div>
     </section>
 
-    <!-- Skills -->
-    <section id="skills" class="section">
-      <div class="container">
-        <h2>Skills</h2>
-        <div class="skill">
-          <span>HTML</span>
-          <div class="skill-bar">
-            <div class="skill-fill" style="width: 90%"></div>
-          </div>
-        </div>
-        <div class="skill">
-          <span>CSS</span>
-          <div class="skill-bar">
-            <div class="skill-fill" style="width: 85%"></div>
-          </div>
-        </div>
-        <div class="skill">
-          <span>JavaScript</span>
-          <div class="skill-bar">
-            <div class="skill-fill" style="width: 80%"></div>
-          </div>
-        </div>
-        <div class="skill">
-          <span>Node.js</span>
-          <div class="skill-bar">
-            <div class="skill-fill" style="width: 70%"></div>
-          </div>
-        </div>
-        <div class="skill">
-          <span>Photoshop</span>
-          <div class="skill-bar">
-            <div class="skill-fill" style="width: 75%"></div>
-          </div>
-        </div>
-        <div class="skill">
-          <span>DaVinci Resolve</span>
-          <div class="skill-bar">
-            <div class="skill-fill" style="width: 65%"></div>
-          </div>
-        </div>
+    <section id="about" class="card">
+      <h3>👩‍💻 About Me</h3>
+      <p>
+        I am a BCA student at Nepathya College, learning web development and
+        programming. I love building websites and solving problems.
+      </p>
+    </section>
+
+    <section id="skills">
+      <h3>💡 Skills</h3>
+      <div class="skills">
+        <div class="skill">HTML</div>
+        <div class="skill">CSS</div>
+        <div class="skill">JavaScript</div>
+        <div class="skill">GitHub</div>
+        <div class="skill">Node.js</div>
       </div>
     </section>
 
-    <!-- Projects -->
-    <section id="projects" class="section">
-      <div class="container">
-        <h2>Projects</h2>
-        <div class="projects-grid">
-          <div class="project-card">
-            <img src="project1.jpg" alt="Project 1" />
-            <h3>Web Project 1</h3>
-            <p>Simple HTML & CSS website design.</p>
-            <a href="#" target="_blank">View Project</a>
-          </div>
-          <div class="project-card">
-            <img src="project2.jpg" alt="Project 2" />
-            <h3>Web Project 2</h3>
-            <p>Interactive JavaScript project.</p>
-            <a href="#" target="_blank">View Project</a>
-          </div>
-          <div class="project-card">
-            <img src="project3.jpg" alt="Project 3" />
-            <h3>Photoshop Design</h3>
-            <p>Creative poster design.</p>
-            <a href="#" target="_blank">View Project</a>
-          </div>
-          <div class="project-card">
-            <img src="project4.jpg" alt="Project 4" />
-            <h3>Video Editing</h3>
-            <p>Video edited in DaVinci Resolve.</p>
-            <a href="#" target="_blank">View Project</a>
-          </div>
-        </div>
-      </div>
+    <section id="education" class="card">
+      <h3>🎓 Education</h3>
+      <p><strong>BCA – Nepathya College</strong></p>
+      <p>Year: second</p>
     </section>
 
-    <!-- Contact -->
-    <section id="contact" class="section">
-      <div class="container">
-        <h2>Contact Me</h2>
-        <form id="contact-form">
-          <input
-            type="prashansha neupane"
-            name="name"
-            placeholder="+9746373848"
-            required
-          />
-          <input
-            type="neupane.prashansha2005@gmail.com"
-            name="email"
-            placeholder="neupane.prashansha2005@gmail.com"
-            required
-          />
-          <textarea
-            name="message"
-            placeholder="send me a message"
-            rows="5"
-            required
-          ></textarea>
-          <button type="submit">Send Message</button>
-        </form>
-        <div class="socials">
-          <a href="" target="_blank">LinkedIn</a>
-          <a href="https://github.com/prashansha005" target="_blank">GitHub</a>
-          <a
-            href="https://www.instagram.com/prashansha_neupane/"
-            target="_blank"
-            >Instagram</a
-          >
-        </div>
-      </div>
+    <section id="contact" class="card">
+      <h3>📞 Contact Me</h3>
+      <p>Email: neupane.prashansha2005@gmail.com</p>
+      <p>Phone: 9746373848</p>
     </section>
 
     <footer>
-      <p>&copy; 2025 Prashansha Neupane. All Rights Reserved.</p>
+      <p>© 2025 Prashansha Neupane</p>
+      <p>Made with ❤️ using HTML, CSS & JS</p>
     </footer>
 
     <script src="script.js"></script>
